force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/Apttus_Base2__UIComponentProvider__c.object-meta.xml
<CustomObject>
    <label>Apttus UI Component Provider</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus UI Component Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>