force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/fields/Apttus_Base2__ClassName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ClassName__c</fullName>
    <label>Provider Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>