force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/fields/Apttus_Base2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>