force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/fields/Apttus_Base2__IsManifest__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__IsManifest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Application Manifest</label>
    <type>Checkbox</type>
</CustomField>