force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/fields/Apttus_Base2__ProviderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ProviderId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>