force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/recordTypes/Apttus_Base2__Action.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Base2__Action</fullName>
    <active>true</active>
    <description>Action provider record</description>
    <label>Action</label>
</RecordType>