force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/recordTypes/Apttus_Base2__Data.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Base2__Data</fullName>
    <active>true</active>
    <description>Data provider record</description>
    <label>Data</label>
</RecordType>