force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/recordTypes/Apttus_Base2__Label.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Base2__Label</fullName>
    <active>true</active>
    <description>Label provider record</description>
    <label>Label</label>
</RecordType>