force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/recordTypes/Apttus_Base2__Manifest.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Base2__Manifest</fullName>
    <active>true</active>
    <description>Application Manifest</description>
    <label>Manifest</label>
</RecordType>