force-app/main/default/objects/Apttus_Base2__UIComponentProvider__c/listViews/Apttus_Base2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Base2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Base2__IsManifest__c</columns>
    <columns>Apttus_Base2__PackageName__c</columns>
    <columns>Apttus_Base2__ClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Providers</label>
</ListView>